# TRM.exe

./: .gitignore  CMakeLists.txt  README.md
include/core/: command.hpp  shell.hpp
source/: main.cpp
source/core/: shell.cpp
